WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154025
Outline corners do not align properly for multiline inlines.
https://bugs.webkit.org/show_bug.cgi?id=154025
Summary
Outline corners do not align properly for multiline inlines.
alan
Reported
2016-02-08 19:06:50 PST
Created
attachment 270907
[details]
Outline corners when outline-offset > 0
Attachments
Outline corners
(920 bytes, text/html)
2016-02-08 19:06 PST
,
alan
no flags
Details
Patch
(27.42 KB, patch)
2016-02-08 19:12 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(27.43 KB, patch)
2016-02-09 13:03 PST
,
alan
zalan
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2016-02-08 19:12:52 PST
Created
attachment 270908
[details]
Patch
Dave Hyatt
Comment 2
2016-02-09 11:14:55 PST
Comment on
attachment 270908
[details]
Patch You could convert a bunch of stuff to "auto", but I don't care that much. :)
alan
Comment 3
2016-02-09 13:03:48 PST
Created
attachment 270946
[details]
Patch
alan
Comment 4
2016-02-09 14:01:25 PST
Committed
r196334
: <
http://trac.webkit.org/changeset/196334
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug