Outline corners do not align properly for multiline inlines. https://bugs.webkit.org/show_bug.cgi?id=154025

Reviewed by David Hyatt.

Adjust border position when outline-offset > 0. This patch also
removes integral pixelsnapping (drawLineForBoxSide takes care of
device pixelsnapping).

Source/WebCore:

Test: fast/inline/outline-corners-with-offset.html

* rendering/RenderInline.cpp:
(WebCore::RenderInline::paintOutlineForLine):

LayoutTests:

* fast/inline/outline-corners-with-offset-expected.html: Added.
* fast/inline/outline-corners-with-offset.html: Added.

Canonical link: https://commits.webkit.org/172149@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196334 268f45cc-cd09-0410-ab3c-d52691b4dbfc